# Hologram

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/research/: blender-52-simulation.md
examples/: export_helper.py
examples/flat-layout/: hologram.toml
examples/flat-layout/assets/: rock.glb  tree.glb
examples/minimal/: hologram.toml
examples/minimal/.hologram/: checks.py  events.jsonl
examples/minimal/export/gltf/weapons/: sword.glb
hologram/: __init__.py  __main__.py  blender.py  checks.py  cli.py  config.py  diff.py  events.py  gltf.py  golden.py  manifest.py  png.py  watch.py
hologram/dashboard/: __init__.py  server.py
hologram/dashboard/static/: app.js  index.html  style.css
hologram/mcp/: __init__.py  server.py
hologram/plugin/: .mcp.json
hologram/plugin/.claude-plugin/: plugin.json
hologram/plugin/hooks/: hooks.json  log_event.py
hologram/plugin/skills/asset-audit/: SKILL.md
hologram/plugin/skills/asset-gate/: SKILL.md
hologram/plugin/skills/blender-sim/: SKILL.md
hologram/plugin/skills/check/: SKILL.md
hologram/plugin/skills/create-skill/: SKILL.md
hologram/plugin/skills/glb-standards/: SKILL.md
hologram/plugin/skills/inspect/: SKILL.md
hologram/plugin/skills/pose-authoring/: SKILL.md
hologram/plugin/skills/start/: SKILL.md
hologram/plugin/skills/status/: SKILL.md
scripts/: make_sample_glbs.py
tests/: test_blender.py  test_checks.py  test_config.py  test_dashboard.py  test_diff.py  test_events.py  test_gltf.py  test_golden.py  test_hooks.py  test_manifest.py  test_mcp.py  test_watch.py
tests/fixtures/manifest-project/: hologram.toml
tests/fixtures/manifest-project/exports/: audit.jsonl  manifest.json
tests/fixtures/manifest-project/exports/.history/coin/: v1.glb
tests/fixtures/manifest-project/exports/.history/hero/: v2.glb
