[project]
name = "hologram"
version = "0.1.0"
description = "Live observability and an agent (MCP) surface for Blender -> glTF asset pipelines."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ieuan King" }]
keywords = ["blender", "gltf", "glb", "mcp", "pipeline", "dashboard", "claude-code"]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
  "pygltflib>=1.16.1",
  "mcp>=1.0.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
hologram = "hologram.cli:main"

[project.urls]
Homepage = "https://github.com/akaieuan/Hologram"
Repository = "https://github.com/akaieuan/Hologram"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hologram*"]

[tool.setuptools.package-data]
hologram = [
  "dashboard/static/*",
  "dashboard/static/vendor/*",
  "plugin/hooks/*",
  "plugin/.claude-plugin/*",
  "plugin/.mcp.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
