[project]
name = "hologram"
version = "0.5.0"
description = "Live observability, guided skills, and an agent (MCP) surface for Blender -> glTF asset pipelines."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ieuan King" }]
keywords = ["blender", "gltf", "glb", "mcp", "pipeline", "dashboard", "claude-code", "skills"]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
  "pygltflib>=1.16.1",
  "mcp>=1.0.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.6"]

[project.scripts]
hologram = "hologram.cli:main"

[project.urls]
Homepage = "https://github.com/akaieuan/Hologram"
Repository = "https://github.com/akaieuan/Hologram"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hologram*"]

[tool.setuptools.package-data]
hologram = [
  "dashboard/static/*",
  "dashboard/static/vendor/*",
  "plugin/hooks/*",
  "plugin/.claude-plugin/*",
  "plugin/.mcp.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E, W), isort (I), pyupgrade (UP), flake8-bugbear (B)
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pyright]
# Basic mode: catch real type errors (None-safety, bad calls, missing symbols)
# without the churn of strict-mode annotation coverage. Runs against the package
# and its tests; examples/ are user-authored templates (some import bpy, which is
# never installed) so they are excluded. pythonVersion tracks the lowest version
# CI exercises (3.11), under which tomllib is stdlib.
include = ["hologram", "tests"]
exclude = ["**/__pycache__", ".venv", "build", "dist", "**/*.egg-info", "examples"]
typeCheckingMode = "basic"
pythonVersion = "3.11"
# pygltflib / mcp ship without py.typed markers; don't flag their absent stubs.
reportMissingModuleSource = false
